package postgres

import (
	"auth/genproto/users"
	"database/sql"
)

type UserStorage struct {
	db *sql.DB
}

func NewUserStorage(db *sql.DB) *UserStorage {
	return &UserStorage{db: db}
}

// Implement the method stubs for the UsersService interface

func (u *UserStorage) RegisterUser(req *users.Users) (*users.RegisterResponse, error) {
	// Implement the logic to register a user in the database
	return nil, nil
}

func (u *UserStorage) LoginUser(req *users.LoginUserRequest) (*users.LoginResponse, error) {
	// Implement the logic to log in a user and return tokens
	return nil, nil
}

func (u *UserStorage) ValidateToken(req *users.ValidateTokenRequest) (*users.TokenValidationResponse, error) {
	// Implement the logic to validate a token
	return nil, nil
}

func (u *UserStorage) RefreshToken(req *users.RefreshTokenRequest) (*users.TokenResponse, error) {
	// Implement the logic to refresh a token
	return nil, nil
}

func (u *UserStorage) ValidateEmail(req *users.VerifyEmailRequest) (*users.Empty, error) {
	// Implement the logic to validate an email
	return nil, nil
}

// User profile methods

func (u *UserStorage) GetUserProfile(req *users.GetUserProfileRequest) (*users.UserProfileResponse, error) {
	// Implement the logic to get a user's profile information
	return nil, nil
}

func (u *UserStorage) UpdateUserProfile(req *users.UpdateUserProfileRequest) (*users.UserProfileResponse, error) {
	// Implement the logic to update a user's profile information
	return nil, nil
}

func (u *UserStorage) DeleteUserProfile(req *users.DeleteUserProfileRequest) (*users.Empty, error) {
	// Implement the logic to delete a user's profile
	return nil, nil
}
